# dasf-seismic-extras

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
dasf_seismic_extras/attributes/: __init__.py  complex_trace.py  dip_azm.py  edge_detection.py  frequency.py  noise_reduction.py  signal.py
dasf_seismic_extras/datasets/: __init__.py  base.py  blake.py  delft.py  f3.py  kahu.py  kerry.py  opunake.py  panoma_council_grove_field_well_logs.py  parihaka.py  poseidon.py  stratton.py  teapot.py  waihapa.py  waka.py
dasf_seismic_extras/transforms/: __init__.py  transforms.py
dasf_seismic_extras/utils/: utils.py
docs/attributes/: complex_trace.md  dip_azm.md  edge_detection.md  frequency.md  noise_reduction.md  signal_process.md
docs/experiments/: Attributes_testing_with_CUDA.ipynb  DevConvNet.ipynb  Facies_Classification_based_on_Well_Logs.ipynb  GLCM_seismic_attributes.ipynb  SOM.ipynb  Stratigraphic_Units_with_DBSCAN.ipynb  Time_Migrated_Synthetic_Data.ipynb
docs/experiments/scripts/: pytorch_lightning.py  stratigraphic_hdbscan.py
docs/tutorials/: Tutorial_1.ipynb  Tutorial_2.ipynb  Tutorial_3.ipynb  Tutorial_4.ipynb  Tutorial_5.ipynb  Tutorial_6.ipynb  Tutorial_7.ipynb
tests/datasets/: test_generic.py
tests/integration/: test_stratigraphic_with_hdbscan.py
tests/seismic/attributes/: params_complex_trace.py  params_dip_azm.py  params_edge_detection.py  params_frequency.py  params_noise_reduction.py  params_signal.py  test_scalability.py  test_v1.py  test_v2.py  test_validation.py  utils.py
tests/seismic/transforms/: test_transforms.py
(+27 files in other folders)
